webapp/src/assets/styles/_dashboards.scss
$include-html-grid-classes: false;
$include-html-block-grid-classes: false;
@import "foundation/components/block-grid";
@import "foundation/components/grid";

$total-columns: 7;
@media #{$small-up} {
	#management-dashboard {
		@include grid-html-classes($size:small);
		@include block-grid-html-classes($size:small,$include-spacing:false);
	}
}

@media #{$medium-up} {
	#management-dashboard {
		@include grid-html-classes($size:medium);
		@include block-grid-html-classes($size:medium,$include-spacing:false);
	}
}

@media #{$large-up} {
	#management-dashboard {
		@include grid-html-classes($size:large);
		@include block-grid-html-classes($size:large,$include-spacing:false);
	}
}

@media print {
	#management-dashboard {
		@include grid-html-classes($size:small);
		@include block-grid-html-classes($size:small,$include-spacing:false);
	}
}

@media print and (min-width: 8in) {
	#management-dashboard {
		@include grid-html-classes($size:medium);
		@include block-grid-html-classes($size:medium,$include-spacing:false);
	}
}

@media print and (min-width: 10.5in) {
	#management-dashboard {
		@include grid-html-classes($size:large);
		@include block-grid-html-classes($size:large,$include-spacing:false);
	}
}

.dashboard {
	.dashboard-header {
		background: $rhz-footer-bg-color;
		border-top: 1px solid black;
		h1 {
			padding: .8rem 0 .5rem 1rem;
			@media #{$small-only} {
				padding: .8rem .5rem;
			}
			margin-top: 0;
			a {
				cursor: text;
			}
		}
		h1, i {
			color: white;
		}
		form .icon-button {
	    font-size: 1.3rem;
	    top: 0.7rem;
	    margin-right: 0.2rem;
		}
		.title-input {
			margin-left: .55rem;
			text-align: left;
			text-transform: uppercase;
			position: relative;
			top: .8rem;
		}
	}
	hr {
		margin-top: 0;
		margin-bottom: 2rem;
	}
	.dropdown-list:not(.button) {
		padding: 0 10px 10px 10px;
	}
  footer.hideable {
    position: fixed;
    bottom: 6.2rem;
  }
	.button.fix-to-bottom {
		z-index: 200;
	}
}

.multi-chart footer, footer.hideable{
	background: #252525;
  padding-top: .75rem;
  padding-bottom: .3rem;
  h1, h2, h3, h4, h5, h6, p {
    color: $rhz-body-color;
  }
}

.multi-chart {
	border-bottom: 1px solid $rhz-navigation-hover-bg-color;
	margin-bottom: 2rem;
	header {
		background: $rhz-navigation-hover-bg-color;
	  h1, h2, h3, h4, h5, h6, p {
	  	text-transform: none;
	  	position: relative;
	  	.icon-button {
	  		font-size: 1rem;
	  		top: .025rem;
	  	}
	  	margin: 0;
	    color: white;
	  }
		h1, input, .icon-button {
			position: relative;
			z-index: 300;
		}
		h2 {
			margin-top: 0.4rem;
			@media #{$small-only} {
				border-top: 1px solid #DBDBDB;
				width: 100%;
				padding: .8rem 0;
			}
			display: inline-block;
		}
		form {
			.icon-button {
				top: .1rem;
			}
		}
		.icon-button {
			color: white;
	    left: initial;
			font-size: 1.2rem;
			padding: 0.5rem 0.7rem;
		}
	  .chart-actions {
			.icon-button {
				top: 0;
				&:not(.left):last-child {
			    padding-right: .9rem;
			    padding-left: 1rem;
			    margin-left: .5rem;
					border-left: 1px solid #DBDBDB;
				}
			}
	  }
	}
	section {
		display: flex;
		@media #{$small-only} {
			flex-direction: column;
		}
		.dropdown-list.chart-selector {
			width: 14rem;
			margin: 0 auto;
		}
	}
	.chart-zone {
		padding: 3rem 0;
	}
	aside {
		background: #F1F1F1;
		border-left: 1px solid $rhz-navigation-hover-bg-color;
		padding-top: 1rem;
		padding-bottom: 2rem;
		.dropdown-list {
		  letter-spacing: 1;
			background-color: transparent;
		}
		@media #{$small-only} {
			padding-top: 0;
			h3 {
				margin-top: 1rem;
				font-size: 1rem;
			}
		}
	}
}

